feat(swagger-gate):start config swagger by gateway