@@ -5,6 +5,7 @@ import org.springframework.core.io.Resource;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.security.KeyFactory;
@@ -24,16 +25,28 @@ public class JwtService {
     private long ttlSeconds;
 
     private PrivateKey loadPrivateKey() {
-        try {
-            String pem = new String(Files.readAllBytes(privateKeyResource.getFile().toPath()), StandardCharsets.UTF_8)
+
+
+        try (InputStream inputStream = privateKeyResource.getInputStream()) {
+            System.out.println("📁 Tentando carregar chave privada de: " + privateKeyResource);
+            // 1. Leia os bytes do *stream*
+            byte[] keyBytes = inputStream.readAllBytes();
+
+            // 2. Converta os bytes para String
+            String pem = new String(keyBytes, StandardCharsets.UTF_8)
                     .replace("-----BEGIN PRIVATE KEY-----", "")
                     .replace("-----END PRIVATE KEY-----", "")
                     .replaceAll("\\s+", "");
-            var keyBytes = Base64.getDecoder().decode(pem);
-            var keySpec = new PKCS8EncodedKeySpec(keyBytes);
+
+            // 3. Decodifique o Base64
+            var decodedKeyBytes = Base64.getDecoder().decode(pem);
+
+            // 4. Gere a chave
+            var keySpec = new PKCS8EncodedKeySpec(decodedKeyBytes);
             return KeyFactory.getInstance("RSA").generatePrivate(keySpec);
+
         } catch (Exception e) {
-            throw new IllegalStateException("Falha ao carregar RSA private key", e);
+              throw new IllegalStateException("Falha ao carregar RSA private key", e);
         }
     }
 
