@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Component;
 
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.security.KeyFactory;
@@ -24,16 +25,25 @@ public class JwtValidator {
     private PublicKey loadPublicKey() {
         if (cachedKey != null) return cachedKey;
 
-        try {
-            String pem = new String(Files.readAllBytes(publicKeyResource.getFile().toPath()), StandardCharsets.UTF_8)
+        // ⬇️ LÓGICA ATUALIZADA AQUI ⬇️
+        try (InputStream inputStream = publicKeyResource.getInputStream()) {
+            // 1. Leia os bytes do *stream*
+            byte[] keyBytes = inputStream.readAllBytes();
+
+            // 2. Converta os bytes para String
+            String pem = new String(keyBytes, StandardCharsets.UTF_8)
                     .replace("-----BEGIN PUBLIC KEY-----", "")
                     .replace("-----END PUBLIC KEY-----", "")
                     .replaceAll("\\s+", "");
 
-            var keyBytes = Base64.getDecoder().decode(pem);
-            var spec = new X509EncodedKeySpec(keyBytes);
+            // 3. Decodifique o Base64
+            var decodedKeyBytes = Base64.getDecoder().decode(pem);
+
+            // 4. Gere a chave (X509EncodedKeySpec está correto para chaves públicas)
+            var spec = new X509EncodedKeySpec(decodedKeyBytes);
             cachedKey = KeyFactory.getInstance("RSA").generatePublic(spec);
             return cachedKey;
+
         } catch (Exception e) {
             throw new IllegalStateException("Falha ao carregar chave pública RSA", e);
         }
